--- a/src/SD.AOP.Core/SD.AOP.Core.csproj
+++ b/src/SD.AOP.Core/SD.AOP.Core.csproj
@@ -1,13 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net40;net45;net451;net461;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net40;net45;net451;net461;netstandard2.0;netstandard2.1</TargetFrameworks>
     <Authors>Lee</Authors>
     <Company>SD</Company>
     <Description>SD.AOP 面向方面编程基础</Description>
     <Copyright>Copyright © SD 2021</Copyright>
-    <Version>2.1.3</Version>
-    <AssemblyVersion>2.1.3</AssemblyVersion>
-    <FileVersion>2.1.3.0</FileVersion>
+    <Version>2.2.0</Version>
+    <AssemblyVersion>2.2.0</AssemblyVersion>
+    <FileVersion>2.2.0.0</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -26,12 +26,12 @@
     <PackageReference Include="Microsoft.Bcl.Async" Version="1.0.168" />
   </ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+  <ItemGroup Condition=" $(TargetFramework.StartsWith('netstandard2')) ">
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="MrAdvice" Version="2.9.2" />
+    <PackageReference Include="MrAdvice" Version="2.9.4" />
     <PackageReference Include="SD.Toolkits.Json" Version="1.0.2" />
   </ItemGroup>
 </Project>
