--- a/src/SD.AOP.LogViewer/Web.config
+++ b/src/SD.AOP.LogViewer/Web.config
@@ -10,9 +10,9 @@
   <!--连接字符串-->
   <connectionStrings>
     <!--日志连接字符串-->
-    <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=SD.IdentitySystem;User Id=sa;Password=realgoal123!;MultipleActiveResultSets=true;" />
-    <!--<add name="DefaultConnection" connectionString="Server=localhost;Port=3306;Database=RemoteDB;User Id=root;Password=sh2015!;" />-->
-    <!--<add name="DefaultConnection" connectionString="Server=localhost;Port=5432;Database=RemoteDB;User Id=postgres;password=sh2015!;" />-->
+    <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=SD.IdentitySystem;User Id=sa;Password=broadmall123!;MultipleActiveResultSets=true;" />
+    <add name="MySql" connectionString="Server=localhost;Port=3306;Database=RemoteDB;User Id=root;Password=sh2015!;" />
+    <add name="PostgreSQL" connectionString="Server=localhost;Port=5432;Database=RemoteDB;User Id=postgres;password=sh2015!;" />
   </connectionStrings>
 
   <!--应用程序配置-->
@@ -79,18 +79,10 @@
         <assemblyIdentity name="System.Numerics.Vectors" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.1.4.0" newVersion="4.1.4.0" />
       </dependentAssembly>
-      <!--<dependentAssembly>
-        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.5.0" newVersion="4.0.5.0" />
-      </dependentAssembly>-->
       <dependentAssembly>
         <assemblyIdentity name="System.Threading.Tasks.Extensions" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.2.0.1" newVersion="4.2.0.1" />
       </dependentAssembly>
-      <!--<dependentAssembly>
-        <assemblyIdentity name="System.ValueTuple" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
-      </dependentAssembly>-->
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
@@ -105,11 +97,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Extensions.DependencyInjection" publicKeyToken="adb9793829ddae60" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.1.7.0" newVersion="3.1.7.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.1.20.0" newVersion="3.1.20.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Extensions.DependencyInjection.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.1.7.0" newVersion="3.1.7.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.1.20.0" newVersion="3.1.20.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
