--- a/src/SD.AOP.Logger.Firebird/SD.AOP.Logger.Firebird.csproj
+++ b/src/SD.AOP.Logger.Firebird/SD.AOP.Logger.Firebird.csproj
@@ -5,9 +5,9 @@
     <Company>SD</Company>
     <Description>SD.AOP - 日志提供者 - Firebird实现</Description>
     <Copyright>Copyright © SD 2021</Copyright>
-    <Version>1.0.0</Version>
-    <AssemblyVersion>1.0.0</AssemblyVersion>
-    <FileVersion>1.0.0.0</FileVersion>
+    <Version>1.0.1</Version>
+    <AssemblyVersion>1.0.1</AssemblyVersion>
+    <FileVersion>1.0.1.0</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -17,7 +17,7 @@
     <DocumentationFile>bin\Release\$(TargetFramework)\SD.AOP.Logger.Firebird.xml</DocumentationFile>
   </PropertyGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'net48'">
+  <ItemGroup Condition=" $(TargetFramework.StartsWith('net4')) ">
     <Reference Include="System.Configuration" />
   </ItemGroup>
 
