--- a/src/SD.AOP.LogViewer.Repository.MySql/SD.AOP.LogViewer.Repository.MySql.csproj
+++ b/src/SD.AOP.LogViewer.Repository.MySql/SD.AOP.LogViewer.Repository.MySql.csproj
@@ -1,6 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>net452;netstandard2.0</TargetFrameworks>
+    <Authors>Lee</Authors>
+    <Company>SD</Company>
+    <Copyright>Copyright © SD 2022</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
