--- a/src/SD.AOP.LogViewer.Repository/SD.AOP.LogViewer.Repository.csproj
+++ b/src/SD.AOP.LogViewer.Repository/SD.AOP.LogViewer.Repository.csproj
@@ -1,6 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>net40;net45;netstandard2.0</TargetFrameworks>
+    <Authors>Lee</Authors>
+    <Company>SD</Company>
+    <Copyright>Copyright © SD 2022</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
