--- a/src/SD.AOP.Core.Tests/SD.AOP.Core.Tests.csproj
+++ b/src/SD.AOP.Core.Tests/SD.AOP.Core.Tests.csproj
@@ -7,20 +7,27 @@
     <Copyright>Copyright © SD 2022</Copyright>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Update="App_Data\RemoteDB.db3">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
   <ItemGroup Condition="$(TargetFramework.StartsWith('net4'))">
     <Reference Include="System.Transactions" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.1'">
     <EmbeddedResource Include="App.config" />
-    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
     <PackageReference Include="coverlet.collector" Version="1.3.0" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="3.1.20" />
     <PackageReference Include="MrAdvice" Version="2.9.5" />
     <PackageReference Include="SD.Common" Version="3.1.4" />
   </ItemGroup>
@@ -30,6 +37,7 @@
     <ProjectReference Include="..\SD.AOP.Logger.Firebird\SD.AOP.Logger.Firebird.csproj" />
     <ProjectReference Include="..\SD.AOP.Logger.MySql\SD.AOP.Logger.MySql.csproj" />
     <ProjectReference Include="..\SD.AOP.Logger.PostgreSQL\SD.AOP.Logger.PostgreSQL.csproj" />
+    <ProjectReference Include="..\SD.AOP.Logger.Sqlite\SD.AOP.Logger.Sqlite.csproj" />
     <ProjectReference Include="..\SD.AOP.Logger.SqlServer\SD.AOP.Logger.SqlServer.csproj" />
   </ItemGroup>
 </Project>
