--- a/src/SD.AOP.Logger.Sqlite/SD.AOP.Logger.Sqlite.csproj
+++ b/src/SD.AOP.Logger.Sqlite/SD.AOP.Logger.Sqlite.csproj
@@ -1,20 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net461;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net40;net45;net461;netstandard2.0</TargetFrameworks>
     <Authors>Lee</Authors>
     <Company>SD</Company>
-    <Description>SD.AOP - 日志提供者 - PostgreSQL实现</Description>
+    <Description>SD.AOP - 日志提供者 - SQLite实现</Description>
     <Copyright>Copyright © SD 2022</Copyright>
-    <Version>1.0.2</Version>
-    <AssemblyVersion>1.0.2</AssemblyVersion>
-    <FileVersion>1.0.2.0</FileVersion>
+    <Version>1.0.0</Version>
+    <AssemblyVersion>1.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>bin\Debug\$(TargetFramework)\SD.AOP.Logger.PostgreSQL.xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\$(TargetFramework)\SD.AOP.Logger.Sqlite.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DocumentationFile>bin\Release\$(TargetFramework)\SD.AOP.Logger.PostgreSQL.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\$(TargetFramework)\SD.AOP.Logger.Sqlite.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup Condition="$(TargetFramework.StartsWith('net4'))">
@@ -27,7 +27,7 @@
 
   <ItemGroup>
     <PackageReference Include="SD.Toolkits.Sql" Version="1.0.5" />
-    <PackageReference Include="SD.Toolkits.Sql.PostgreSQL" Version="1.0.4" />
+    <PackageReference Include="SD.Toolkits.Sql.Sqlite" Version="1.0.1" />
   </ItemGroup>
 
   <ItemGroup>
