--- a/src/SD.AOP.Logger.MySql/SD.AOP.Logger.MySql.csproj
+++ b/src/SD.AOP.Logger.MySql/SD.AOP.Logger.MySql.csproj
@@ -1,13 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net452;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net452;net462;netstandard2.0</TargetFrameworks>
     <Authors>Lee</Authors>
     <Company>SD</Company>
     <Description>SD.AOP - 日志提供者 - MySQL实现</Description>
     <Copyright>Copyright © SD 2023</Copyright>
-    <Version>1.0.2</Version>
-    <AssemblyVersion>1.0.2</AssemblyVersion>
-    <FileVersion>1.0.2.0</FileVersion>
+    <Version>1.0.3</Version>
+    <AssemblyVersion>1.0.3</AssemblyVersion>
+    <FileVersion>1.0.3.0</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -27,7 +27,7 @@
 
   <ItemGroup>
     <PackageReference Include="SD.Toolkits.Sql" Version="1.0.5" />
-    <PackageReference Include="SD.Toolkits.Sql.MySql" Version="1.0.4" />
+    <PackageReference Include="SD.Toolkits.Sql.MySql" Version="1.0.5" />
   </ItemGroup>
 
   <ItemGroup>
