--- a/src/SD.AOP.LogViewer.Repository/SD.AOP.LogViewer.Repository.csproj
+++ b/src/SD.AOP.LogViewer.Repository/SD.AOP.LogViewer.Repository.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net40;net45;netstandard2.0</TargetFrameworks>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>Lee</Authors>
     <Company>SD</Company>
     <Copyright>Copyright © SD 2023</Copyright>
