--- a/src/SD.AOP.LogViewer/App.config
+++ b/src/SD.AOP.LogViewer/App.config
@@ -12,7 +12,7 @@
   <!--连接字符串-->
   <connectionStrings>
     <!--日志连接字符串-->
-    <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=SD.IdentitySystem;User Id=sa;Password=broadmall123!;MultipleActiveResultSets=true;" />
+    <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=SD.IdentitySystem;User Id=sa;Password=broadmall123!;MultipleActiveResultSets=true;TrustServerCertificate=true;" />
   </connectionStrings>
 
   <!--SD.Framework配置-->
@@ -45,8 +45,6 @@
     <hosts>
       <host port="29780" protocol="http" />
     </hosts>
-    <!--应用程序名称-->
-    <applicationName>SD.AOP.LogViewer</applicationName>
     <!--静态文件根目录-->
     <staticFiles>Content</staticFiles>
   </sd.toolkits.aspNet>
