--- a/src/SD.AOP.Core.Tests/App.config
+++ b/src/SD.AOP.Core.Tests/App.config
@@ -14,7 +14,7 @@
     <!--<loggerProvider type="SD.AOP.FbSqlLogger" assembly="SD.AOP.Logger.Firebird" />-->
     <loggerProvider type="SD.AOP.SqliteLogger" assembly="SD.AOP.Logger.Sqlite" />
     <!--连接字符串-->
-    <!--<connectionString value="Data Source=.;Initial Catalog=RemoteDB;User Id=sa;Password=broadmall123!;" />-->
+    <!--<connectionString value="Data Source=.;Initial Catalog=RemoteDB;User Id=sa;Password=broadmall123!;MultipleActiveResultSets=true;TrustServerCertificate=true;" />-->
     <!--<connectionString value="Server=localhost;Port=3306;Database=RemoteDB;User Id=root;Password=sh2015!;Allow User Variables=True;" />-->
     <!--<connectionString value="Server=localhost;Port=5432;Database=RemoteDB;User Id=postgres;password=sh2015!;" />-->
     <!--<connectionString value="Data Source=.;Initial Catalog=|DataDirectory|REMOTEDB.FDB;User=sysdba;Password=masterkey;Character Set=utf8;Server Type=Embedded;Client Library=Firebird/fbclient.dll;" />-->
